# diy-page-cache-IoannTar2004

./: .gitignore  CMakeLists.txt  a  example.txt  ОС Лаб 2.docx
.devcontainer/: devcontainer.json
src/bench/: ema-search-str.cpp  ema-search-str.h
src/cacheAPI/: cache.c  cache.cpp  cache.h
src/cacheManager/: cache_manager.c  main_cache_manager.c  main_cache_manager.cpp
src/utils/: cache_meta.h
test/: test.cpp  test_file
